FIXED: pulls proper date for yes/no check

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		window.onload=function(){
 			var q = new Date();
 			var m = q.getMonth();
-			var d = q.getDay();
+			var d = q.getDate();
 			var y = q.getFullYear();
 			var date = new Date(y,m,d);
 			var fball = document.getElementById("football");
