--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		letter-spacing: -1px;
 		}
 	.fhead{
-		margin-top:200px;
+		margin-top:25%;
 		text-align:center;
 		font-size: 120px;
 /*		color: rgb(0, 0, 0);*/
