--- a/index.html
+++ b/index.html
@@ -1,110 +1,15 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<style type="text/css">
-	table{
-		
-	}
-	body{
-		background-color: #244b35;
-	}
-	a{
-		color: #f3c04d;
-		text-decoration: none;
-	}
-	td{
-		font-size: 32px;
-/*		color: rgb(0, 0, 0);*/
-		color: #f3c04d;
-		display: block;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-weight: bold;
-		letter-spacing: -1px;
-		}
-	.fhead{
-		margin-top:25%;
-		text-align:center;
-		font-size: 120px;
-/*		color: rgb(0, 0, 0);*/
-		color: #f3c04d;
-		display: block;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-weight: bold;
-		letter-spacing: -1px;
-		}
-	.fbody{
-		text-align:center;
-		font-size: 32px;
-/*		color: rgb(0, 0, 0);*/
-		color: #f3c04d;
-		display: block;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-weight: bold;
-		letter-spacing: -1px;
-		}
-	h1 {
-		display:none;font-size: 32px;
-	}
-	</style>
 	
+	<link rel="stylesheet" href="football.css">
+	
+	<script src="football.js"></script>
 	<script src="http://time.is/_countdown_beta.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.3.js"></script>
 
 	<script type="text/javascript">//<![CDATA[
-		window.onload=function(){
-			var q = new Date();
-			var m = q.getMonth();
-			var d = q.getDate();
-			var y = q.getFullYear();
-			var today = new Date(y,m,d);
-			var fball = document.getElementById("football");
-			
-			fbegin=new Date(2016,08,02,18,30);
-			fend=new Date('2017-01-02');
-			
-			fball.innerHTML = 'NO';
-			console.log(d)
-			if(today >= fbegin && today <= fend)
-			{
-			    fball.innerHTML = 'YES'
-				document.getElementById('_z118').style.display = 'none';
-				document.getElementById('countdown').style.display = 'none';
-			}
-			else
-			{
-			    fball.innerHTML = 'NO';
-				var l="en"
-				time_is_widget.init({_z118:{id:"Central Standard Time_z118",
-				leading_zeros:"automatic",
-				template:'<a href="time.is/" id="time_is_link"></a>'
-						//+'<h1 style="text-align:left">headline</h1>'
-						+'<table style="width:100%" border="0" cellpadding="0" cellspacing="0">'
-							+'<tr>'
-								+'<td style="text-align:center"><a href="http://ourdailybears.com">(days<br/>)(hours<br/>)(minutes<br/>)seconds</a></td>'
-								+'<td></td>'
-							+'</tr>'
-						+'</table>',
-				countdown_to:fbegin,
-				units:"long",
-				units_abbr:["y","d","h","m","s"],
-				unit_names:["year","day","hour","minute","second"],
-				units_pl:["years","days","hours","minutes","seconds"],on_0:"Time is up!",headline:'Countdown to Football!'}});
-				
-				// var tm_n=0,templates=['<h1 style="text-align:left">headline</h1><table style="width:100%" border="0" cellpadding="0" cellspacing="0"><tr><td></td><td style="text-align:left">(days<br/>)(hours<br/>)(minutes<br/>)seconds</td><td></td></tr></table>',
-				// '<h1>headline</h1>(days )(hours )(minutes )seconds','<h1>headline</h1>(days:)hours:minutes:seconds'],lz=["automatic","automatic","on"],ul=["long","short","off"]
-				// function change_tmpl(n){
-				// // tm_n++;if(templates.length==tm_n)tm_n=0
-				// time_is_widget.ca["_z118"]["template"]=templates[n]
-				// time_is_widget.ca["_z118"]["leading_zeros"]=lz[n]
-				// time_is_widget.ca["_z118"]["units"]=ul[n]
-				// }
-			}
-		}
-	
-	</script>
-		
-	<script>
-		
-		
+		window.onload=function(){football.init()}
 	</script>
 
 </head>
