--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	
+
 	<link rel="stylesheet" href="football.css">
-	
+
 	<script src="football.js"></script>
-	<script src="http://time.is/_countdown_beta.js"></script>
 	<script src="https://code.jquery.com/jquery-2.2.3.js"></script>
 
 	<script type="text/javascript">//<![CDATA[
@@ -16,7 +15,7 @@
 
 <body>
 	<a href="http://ourdailybears.com"><div class="fhead" id="football"></div>
-	<div class="fbody" id="countdown">Football starts in:</div></a>
-	<div class="fbody" id="_z118"><a href="time.is/" id="time_is_link"></a></h1></div>
+	<div class="fbody" id="countdown">Football starts in:</div>
+	<div class="fbody" id="timer"></div>
 </body>
 </html>
